# yolox-aws-lambda

./: .gitignore  README.md  environment.yml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  start.sh
app/: main.py
app/api/: predict.py
app/core/: config.py
app/exps/: yolox_s.py
app/models/: prediction.py
app/predictor/: predictor.py
app/utils/: helpers.py  predictor.py
tests/: test_predict.py  test_predictor.py
