[tool.poetry]
name = "yolox"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["harrisDLEng <harris@goclever.io>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchvision = "^0.15.2"
notebook = "^7.0.4"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
mangum = "^0.17.0"
opencv-python = "^4.9.0.80"
botocore = "^1.34.110"
awslambdaric = "^2.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
