[tool.poetry]
name = "yolox-aws-lambda"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["harrisDLEng <harris@goclever.io>"]


packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
notebook = "^7.0.4"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
mangum = "^0.17.0"
opencv-python = "^4.9.0.80"
botocore = "^1.34.110"
awslambdaric = "^2.0.11"
torch = "^2.0.1"
onnx = "^1.8.1"
pybind11 = "^2.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
