[tool.poetry]
name = "yolox-aws-lambda"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["harrisDLEng <harris@goclever.io>"]


packages = [
    { include = "app" }
]


[tool.poetry.dependencies]
python = "^3.10"
torchvision = "0.15.2"
torchaudio = "2.0.2"
notebook = "^7.0.4"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
mangum = "^0.17.0"
opencv-python = "^4.9.0.80"
botocore = "^1.34.110"
awslambdaric = "^2.0.11"
torch = "2.0.1"
onnx = "1.14.0"
numpy = "^1.26.4"
onnx-simplifier = "0.3.10"
onnxoptimizer = "0.3.13"
onnxruntime = "1.13.1"
loguru = "^0.7.2"
protobuf = "4.25.4"
memory-profiler = "^0.61.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core", "torch"]
build-backend = "poetry.core.masonry.api"
